fix(redux): fiw background image and games layout bugs

--- a/src/components/games/games.scss
+++ b/src/components/games/games.scss
@@ -3,7 +3,7 @@ section {
     display: flex;
     align-items: center;
     position: relative;
-    width: 100%;
+    width: 810px;
 
     .layout {
       position: absolute;
@@ -39,6 +39,9 @@ section {
     }
     @media screen and (max-width: 980px) and (min-width: 640px) {
       width: 640px;
+    }
+    @media screen and (max-width: 640px) {
+      width: 100%;
     }
   }
 
