--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@ body {
 
 #app {
   background-image: url(../assets/images/bg.webp);
-  background-size: cover;
+  background-size: auto auto;
   background-repeat: no-repeat;
 }
 
